--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>Overt Streams</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css">
-    <script type="text/javascript" src="https://rawgit.com/theadam/snipplets/gh-pages/dist/snipplets.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
+    <script type="text/javascript" src="https://rawcdn.githack.com/theadam/snipplets/f7ce502db3e3b4b31244e5eed35740c0863197ad/dist/snipplets.min.js"></script>
     <script type="text/javascript" src="dist/overt.js"></script>
     <style type="text/css">
       .CodeMirror {
